infrastructure/k8s/base/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: api
    app.kubernetes.io/name: file-processor
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: api
